Começo do envio e receptor em Hamming
Começo do envio e receptor em Hamming, ainda não funcional em Java

--- a/TransferenciaDadosTP/nbproject/private/private.properties
+++ b/TransferenciaDadosTP/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\gabri\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+user.properties.file=C:\\Users\\0039246\\AppData\\Roaming\\NetBeans\\12.6\\build.properties
